# fett

./: .travis.yml  Makefile  README.rst  bench.py  pyproject.toml  setup.py  test.py
fett/: __init__.py
spec/: comments.yml  filters.yml  interpolation.yml  sections.yml  test.py
