[tool.poetry]
name = "fett"
version = "0.4.0"
description = "A fast indentation-preserving template engine."
authors = ["Heli Aldridge <heli@heli.pet>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.7"


[tool.poetry.group.dev.dependencies]
PyYAML = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
